fixed css typo body-align to text-align

--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -40,7 +40,7 @@
   font-size: 1.2rem;
   color: #1a1a1a;
   margin: 1rem 0;
-  body-align: end;
+  text-align: end;
 }
 
 .left .content .btn-container {
