--- a/frontend/src/app/pages/ask-question/ask-question.component.css
+++ b/frontend/src/app/pages/ask-question/ask-question.component.css
@@ -20,7 +20,7 @@
 .top-section h1 {
   font-size: 2rem;
   font-weight: 500;
-  body-align: center;
+  text-align: center;
 }
 
 .top-section .img-container {
