--- a/frontend/src/app/pages/password-reset/password-reset.component.css
+++ b/frontend/src/app/pages/password-reset/password-reset.component.css
@@ -8,7 +8,7 @@
 }
 
 .title-container {
-  body-align: center;
+  text-align: center;
   margin-bottom: 1rem;
 }
 
@@ -19,7 +19,7 @@ mat-card {
 }
 
 mat-card p {
-  body-align: start;
+  text-align: start;
   margin-bottom: 2rem;
 }
 
