--- a/frontend/src/app/components/answer/answer.component.html
+++ b/frontend/src/app/components/answer/answer.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="answer-content">
-            <div class="description">
+            <div class="body">
                 {{answer.body}}
             </div>
             <div class="user-info">
