--- a/frontend/src/app/components/question/question.component.html
+++ b/frontend/src/app/components/question/question.component.html
@@ -18,8 +18,8 @@
             <a class="question-title" routerLink="/questions/{{question.id}}">
                 <h3 appSearchHighlight="{{ searchTermHighlight }}">{{question.title}}</h3>
             </a>
-            <div class="description" appSearchHighlight="{{ searchTermHighlight }}">
-                {{question.description | truncate: 400}}
+            <div class="body" appSearchHighlight="{{ searchTermHighlight }}">
+                {{question.body | truncate: 400}}
             </div>
             <div class="tags">
                 <span *ngFor="let tag of question.tags">
