--- a/frontend/src/app/pages/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/pages/user-dashboard/user-dashboard.component.css
@@ -113,3 +113,29 @@ mat-card div:hover {
 .tags a {
   color: #0a95ff;
 }
+
+.error-user-analytics {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.error-user-analytics p {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.error-user-analytics button {
+  width: 15rem;
+  height: 3rem;
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.error-user-analytics button:hover {
+  background-color: #ff6f00;
+}
