--- a/frontend/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -1,34 +1,34 @@
 <div class="dashboard-page">
-    <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-    <ng-container *ngIf="(user$ | async) as user; else noUser">
-        <div class="top-section">
-            <div class="user-container">
-                <div class="avatar-container">
-                    <img class="avatar" src="{{user.avatar ? user.avatar : 'assets/images/avatar.png'}}" alt="avatar">
-                </div>
-                <div class="bio">
-                    <h1>{{user.name}}</h1>
-                    <p>Member since <span>{{user.createdAt | timeAgo}}</span>
-                    </p>
-                </div>
+    <div class="top-section">
+        <div class="user-container">
+            <div class="avatar-container">
+                <img class="avatar" src="{{user.avatar ? user.avatar : 'assets/images/avatar.png'}}" alt="avatar">
             </div>
-            <div class="edit-profile">
-                <button mat-raised-button routerLink="/dashboard/edit-profile" color="accent">
-                    <mat-icon>edit</mat-icon>
-                    <span>Edit Profile</span>
-                </button>
+            <div class="bio">
+                <h1>{{user.name}}</h1>
+                <p>Member since <span>{{user.createdAt | timeAgo}}</span>
+                </p>
             </div>
         </div>
-        <div class="analytics">
+        <div class="edit-profile">
+            <button mat-raised-button routerLink="/dashboard/edit-profile" color="accent">
+                <mat-icon>edit</mat-icon>
+                <span>Edit Profile</span>
+            </button>
+        </div>
+    </div>
+    <app-progress-spinner *ngIf="loading"></app-progress-spinner>
+    <div class="analytics">
+        <!-- <ng-container *ngIf="(userAnalytics$ | async) as userAnalytics; else noUserAnalytics"> -->
             <mat-card>
                 <div class="answers">
-                    <p>
+                    <p *ngIf="userAnalytics.totalAnswers > 0">
                         You have answered&nbsp;
                         <a [routerLink]="['/questions']" [queryParams]="{ filter: 'answered', userId: '1' }">
-                            {{user.answersCount! | thousandSeparator}} questions
+                            {{userAnalytics.totalAnswers | thousandSeparator}} questions
                         </a>
                     </p>
-                    <p *ngIf="user.answersCount === 0">
+                    <p *ngIf="userAnalytics.totalAnswers === 0">
                         You have not answered any questions yet&nbsp;
                         <a [routerLink]="['/questions']" [queryParams]="{ filter: 'unanswered' }">
                             Unanswered Questions
@@ -38,12 +38,13 @@
             </mat-card>
             <mat-card>
                 <div class="questions">
-                    <p>You have asked&nbsp;
-                        <a [routerLink]="['/questions']" [queryParams]="{  userId: '1' }">
-                            {{user.questionsCount! | thousandSeparator }} questions
+                    <p *ngIf="userAnalytics.totalQuestions > 0">
+                        >You have asked&nbsp;
+                        <a [routerLink]="['/questions']" [queryParams]="{  userId: user.id}">
+                            {{userAnalytics.totalQuestions | thousandSeparator }} questions
                         </a>
                     </p>
-                    <p *ngIf="user.questionsCount === 0">
+                    <p *ngIf="userAnalytics.totalQuestions === 0">
                         You have not asked any questions yet&nbsp;
                         <a routerLink="/questions/ask">Ask Questions</a>
                     </p>
@@ -51,22 +52,24 @@
             </mat-card>
             <mat-card>
                 <div class="tags">
-                    <p>You have participated in&nbsp;
+                    <p *ngIf="userAnalytics.totalTags > 0">
+                        You have participated in&nbsp;
                         <a [routerLink]="['/tags']" [queryParams]="{ userId: '1' }">
-                            {{user.tagsCount! | thousandSeparator}} tags
+                            {{userAnalytics.totalTags | thousandSeparator}} tags
                         </a>
                     </p>
-                    <p *ngIf="user.tagsCount === 0">You have not participated in any
+                    <p *ngIf="userAnalytics.totalTags === 0">You have not participated in any
                         <a routerLink="/tags">Tags</a>
                     </p>
                 </div>
             </mat-card>
-        </div>
-    </ng-container>
-    <ng-template #noUser>
-        <div class="no-user" *ngIf="!loading">
-            <p>The user does not exist.</p>
-            <button mat-raised-button color="accent" (click)="goBack()">Go Back</button>
-        </div>
-    </ng-template>
+        <!-- </ng-container> -->
+        <!-- <ng-template #noUserAnalytics>
+            <div class="error-user-analytics" *ngIf="!loading">
+                <p>Error loading user analytics. Please try again later.</p>
+                <button mat-raised-button color="accent" [routerLink]="['/questions']"
+                    [queryParams]="{ filter: 'unanswered' }">Start Contributing</button>
+            </div>
+        </ng-template> -->
+    </div>
 </div>
