--- a/frontend/src/app/pages/sign-in/sign-in.component.html
+++ b/frontend/src/app/pages/sign-in/sign-in.component.html
@@ -14,7 +14,7 @@
                     Password is required.
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button type="submit" [disabled]="!form.valid || loading" color="accent">Sign In</button>
+            <button mat-raised-button type="submit" [disabled]="!form.valid" color="accent">Sign In</button>
             <div class="forgot-password">
                 <a routerLink="/forgot-password">Forgot Password?</a>
             </div>
