forgot password request

--- a/frontend/src/app/pages/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,19 +1,28 @@
 <div class="forgot-password-page">
-    <mat-card>
+    <mat-card *ngIf="!passwordResetRequested">
         <p>
             Forgot your account’s password? <br>
             Enter your email address and we’ll send you a recovery link.
         </p>
-        <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <mat-form-field appearance="outline">
                 <input matInput placeholder="Email" type="email" formControlName="email" required>
-                <mat-error *ngIf="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched">
+                <mat-error *ngIf="form.get('email')?.invalid && form.get('email')?.touched">
                     Please enter a valid email address.
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button type="submit" [disabled]="!forgotPasswordForm.valid" color="accent">
+            <button mat-raised-button type="submit" [disabled]="!form.valid" color="accent">
                 Send Password Reset Email
             </button>
         </form>
+    </mat-card>
+    <mat-card *ngIf="passwordResetRequested">
+       <div>
+        <mat-icon>check_circle</mat-icon>
+        <p>
+            A password reset link has been sent to your email address. <br>
+            Please check your inbox and follow the instructions to reset your password.
+        </p>
+       </div>
     </mat-card>
 </div>
