--- a/frontend/src/app/pages/forgot-password/forgot-password.component.css
+++ b/frontend/src/app/pages/forgot-password/forgot-password.component.css
@@ -32,3 +32,17 @@
 mat-error.mat-mdc-form-field-error {
   font-size: 0.8rem;
 }
+
+mat-card div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+mat-icon {
+  width: 50px;
+  height: 50px;
+  font-size: 3rem;
+  color: green;
+}
