--- a/frontend/src/app/pages/password-reset/password-reset.component.html
+++ b/frontend/src/app/pages/password-reset/password-reset.component.html
@@ -3,17 +3,16 @@
         <h1>Reset Password</h1>
     </div>
     <mat-card>
-        <p>
+        <!-- <p> TODO:(enhancement) display user account email here
             Reset password for:<br>
             <span>username@gmail.com</span>
-            <!-- <span>{{token}}</span> -->
-        </p>
-        <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
+        </p> -->
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <mat-form-field>
                 <mat-label>Password</mat-label>
                 <input matInput type="password" formControlName="password">
                 <mat-error
-                    *ngIf="resetPasswordForm.get('password')?.invalid && resetPasswordForm.get('password')?.touched">
+                    *ngIf="form.get('password')?.invalid && form.get('password')?.touched">
                     Password must be at least 8 characters long,<br>
                     contain at least one uppercase letter,<br>
                     one lowercase letter,<br>
@@ -26,11 +25,11 @@
                 <input matInput type="password" formControlName="confirmPassword"
                     [errorStateMatcher]="passwordMatchErrorState">
                 <mat-error
-                    *ngIf="(resetPasswordForm.hasError('mismatch') || resetPasswordForm.get('confirmPassword')?.invalid) && resetPasswordForm.get('confirmPassword')?.touched">
+                    *ngIf="(form.hasError('mismatch') || form.get('confirmPassword')?.invalid) && form.get('confirmPassword')?.touched">
                     Passwords do not match
                 </mat-error>
             </mat-form-field>
-            <button mat-raised-button color="accent" type="submit" [disabled]="!resetPasswordForm.valid">
+            <button mat-raised-button color="accent" type="submit" [disabled]="!form.valid">
                 Reset Password
             </button>
         </form>
