--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -7,12 +7,16 @@
         <button mat-button routerLink="/tags" routerLinkActive="active">Tags</button>
         <button mat-button routerLink="/users" routerLinkActive="active">Users</button>
     </div>
-    <div class="sign-btns" *ngIf="isSignedIn">
+    <div class="sign-btns" *ngIf="isSignedIn&&!isAdmin">
         <button mat-raised-button color="accent" routerLink="/dashboard">Dashboard</button>
         <button mat-button (click)="signOut()">Sign Out</button>
       </div>
-      <div class="sign-btns" *ngIf="!isSignedIn">
+      <div class="sign-btns" *ngIf="!isSignedIn&&!isAdmin">
         <button mat-button routerLink="/sign-in">Sign In</button>
         <button mat-raised-button color="accent" routerLink="/sign-up">Sign Up</button>
+      </div>
+      <div class="admin-btns" *ngIf="isSignedIn&&isAdmin">
+        <button mat-raised-button color="accent" routerLink="/admin">Admin Dashboard</button>
+        <button mat-button (click)="signOut()">Sign Out</button>
       </div>
 </mat-toolbar>
