--- a/frontend/src/app/pages/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/pages/admin-dashboard/admin-dashboard.component.css
@@ -7,12 +7,12 @@
 }
 
 .top-section {
-  height: 15%;
+  height: 10%;
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .user-container {
@@ -39,14 +39,13 @@
 }
 
 .bio h1 {
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-size: 2.5rem;
   margin-bottom: 0;
 }
 
-.bio p {
-  font-size: 0.8rem;
-  font-weight: 500;
+.bio p > * {
+  font-size: 1rem;
+  font-weight: normal;
 }
 
 .edit-profile button {
