get questions by userId

--- a/frontend/src/app/pages/questions/questions.component.css
+++ b/frontend/src/app/pages/questions/questions.component.css
@@ -71,3 +71,10 @@
 .no-questions button:hover {
   background-color: #ff6f00;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+}
