--- a/frontend/src/app/components/tag/tag.component.html
+++ b/frontend/src/app/components/tag/tag.component.html
@@ -25,7 +25,7 @@
     <div class="tag-question-count">
         <a [routerLink]="['/questions']" [queryParams]="{ filter: 'Tag', tag: tag.name }"
             matTooltip="Questions tagged {{tag.name}}" [matTooltipPosition]="position">
-            {{tag.questionsCount | thousandSeparator}} questions
+            {{tag.totalQuestions | thousandSeparator}} questions
         </a>
     </div>
 </div>
