--- a/frontend/src/app/pages/users/users.component.html
+++ b/frontend/src/app/pages/users/users.component.html
@@ -14,7 +14,7 @@
                 <mat-tab *ngFor="let userCategorie of userCategories" [label]="userCategorie.label">
 
                     <div class="users" *ngIf="users.length>0; else noUsers">
-                        <app-user class="user" *ngFor="let user of users" [user]="user"></app-user>
+                        <app-user class="user" *ngFor="let user of users | paginate: { id: 'users-page', currentPage: page, itemsPerPage, totalItems}" [user]="user"></app-user>
                     </div>
                 </mat-tab>
             </mat-tab-group>
@@ -29,4 +29,7 @@
             </button>
         </div>
     </ng-template>
+</div>
+<div class="pagination" *ngIf="users$ | async ">
+    <pagination-controls (pageChange)="onPageChange($event)" id="users-page"></pagination-controls>
 </div>
